Fix the linking error of individual project compilation [3rdparty]

--- a/3rdparty/generic-ccd/CMakeLists.txt
+++ b/3rdparty/generic-ccd/CMakeLists.txt
@@ -21,12 +21,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
-IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
-ELSE ()
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-ENDIF ()
+include(../CMakeCommon.cmake)
 
 ############# GENERIC CCD ###############
 set(genericccd_SRCS
