Fix the CMakeCommon.cmake inclusion

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -15,7 +15,7 @@ endif(APPLE)
 
 set(LIBRARIES_FOUND TRUE)
 
-include(CMakeCommon.cmake)
+include(CMakeCommon)
 
 # Clang Format support
 IF (UNIX OR APPLE)
