--- a/3rdparty/indi-apogee/CMakeLists.txt
+++ b/3rdparty/indi-apogee/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 include_directories( ${APOGEE_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 ########### QSI ###########
 set(indiapogee_SRCS
