--- a/3rdparty/indi-duino/CMakeLists.txt
+++ b/3rdparty/indi-duino/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
 include_directories(${FIRMATA_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 ################# libfirmata ############################
 set (firmata_VERSION_MAJOR 1)
