--- a/3rdparty/indi-qsi/CMakeLists.txt
+++ b/3rdparty/indi-qsi/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 include_directories( ${QSI_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 ########### QSI ###########
 set(indiqsi_SRCS
