--- a/3rdparty/indi-shelyak/CMakeLists.txt
+++ b/3rdparty/indi-shelyak/CMakeLists.txt
@@ -18,7 +18,7 @@ set (SHELYAK_VERSION_MINOR 0)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_shelyak.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_shelyak.xml )
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 set(shelyak_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/indi_shelyakeshel_spectrograph.cpp
