--- a/3rdparty/indi-tess/CMakeLists.txt
+++ b/3rdparty/indi-tess/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
 include_directories( ${NOVA_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 ##################### indi arduino #####################
 set(inditess_SRCS
