--- a/3rdparty/generic-ccd/CMakeLists.txt
+++ b/3rdparty/generic-ccd/CMakeLists.txt
@@ -21,7 +21,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 ############# GENERIC CCD ###############
 set(genericccd_SRCS
