--- a/3rdparty/indi-asi/CMakeLists.txt
+++ b/3rdparty/indi-asi/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 if (APPLE)
     set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/mac/libASICamera2.bin)
