--- a/3rdparty/indi-ffmv/CMakeLists.txt
+++ b/3rdparty/indi-ffmv/CMakeLists.txt
@@ -25,7 +25,7 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 include_directories( ${DC1394_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 ########### QSI ###########
 set(indiffmv_SRCS
