--- a/3rdparty/indi-sx/CMakeLists.txt
+++ b/3rdparty/indi-sx/CMakeLists.txt
@@ -25,7 +25,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
-include(../CMakeCommon.cmake)
+include(CMakeCommon)
 
 set(indisxccd_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/sxccd.cpp
