Force linking against all gsl libraries

--- a/libindi/libs/indibase/alignment/CMakeLists.txt
+++ b/libindi/libs/indibase/alignment/CMakeLists.txt
@@ -34,21 +34,24 @@ IF (UNITY_BUILD)
     ENABLE_UNITY_BUILD(AlignmentDriver AlignmentDriver_SRC 15 cpp)
 ENDIF ()
 
-if (CYGWIN)
-set (AlignmentDriver_SRC ${AlignmentDriver_SRC}
+IF (CYGWIN)
+    SET(AlignmentDriver_SRC ${AlignmentDriver_SRC}
         ${CMAKE_SOURCE_DIR}/libs/lilxml.c
         ${CMAKE_SOURCE_DIR}/libs/indicom.c)
-add_library(AlignmentDriver STATIC ${AlignmentDriver_SRC})
-target_link_libraries(AlignmentDriver dl ${GSL_LIBRARIES} ${NOVA_LIBRARIES})
-else(CYGWIN)
-add_library(AlignmentDriver SHARED ${AlignmentDriver_SRC})
-set_target_properties(AlignmentDriver PROPERTIES COMPILE_FLAGS "-fPIC")
-if (APPLE)
-target_link_libraries(AlignmentDriver dl -L/usr/local/lib ${GSL_LIBRARIES})
-else(APPLE)
-target_link_libraries(AlignmentDriver dl ${GSL_LIBRARIES})
-endif(APPLE)
-endif(CYGWIN)
+
+    add_library(AlignmentDriver STATIC ${AlignmentDriver_SRC})
+    target_link_libraries(AlignmentDriver dl ${GSL_LIBRARIES} ${NOVA_LIBRARIES})
+ELSE ()
+    add_library(AlignmentDriver SHARED ${AlignmentDriver_SRC})
+    set_target_properties(AlignmentDriver PROPERTIES COMPILE_FLAGS "-fPIC")
+    IF (APPLE)
+        target_link_libraries(AlignmentDriver dl -L/usr/local/lib ${GSL_LIBRARIES})
+    ELSE ()
+        # Force linking all referenced libraries because of libgsl is not linked against cblas library on Linux
+        SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-as-needed")
+        target_link_libraries(AlignmentDriver dl ${GSL_LIBRARIES})
+    ENDIF ()
+ENDIF ()
 
 if (INDI_BUILD_QT5)
 qt5_use_modules(AlignmentDriver Network)
