Update INDI QSI to 0.6. Save fan, antiblooming, and gain in configuration file. Needs testing

--- a/3rdparty/indi-qsi/CMakeLists.txt
+++ b/3rdparty/indi-qsi/CMakeLists.txt
@@ -1,10 +1,12 @@
-cmake_minimum_required(VERSION 2.4.7)
+cmake_minimum_required(VERSION 3.2)
 PROJECT(indi_qsi CXX C)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 include(GNUInstallDirs)
-set(RULES_INSTALL_DIR "/lib/udev/rules.d/")
+
+SET(CMAKE_CXX_STANDARD 11)
+SET(RULES_INSTALL_DIR "/lib/udev/rules.d/")
 
 find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
@@ -12,7 +14,7 @@ find_package(QSI REQUIRED)
 find_package(ZLIB REQUIRED)
 
 set (QSI_VERSION_MAJOR 0)
-set (QSI_VERSION_MINOR 5)
+set (QSI_VERSION_MINOR 6)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_qsi.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_qsi.xml )
